# research

Custom App/ChatPDD/: .env.development  .env.example  .env.netlify.example  .env.production  .env.production.example  .env.staging  .gitignore  .npmrc  CHANGELOG.md  CI_CD_WORKFLOW.md  CLAUDE.md  ChatPDD_PRD.md  ChatPDD_project_milestones.md  Climate Physical Risk Database for Mapping.md  README.md  deploy-netlify.sh  index.ts  jest.config.js  jest.setup.js  middleware.ts  netlify-deploy-with-env.sh  netlify.toml  next.config.mjs  package.json  playwright.config.js  pnpm-lock.yaml  project_milestones.md  schema.sql  tailwind.config.ts  vercel.json
Custom App/ChatPDD/.bmad-core/: core-config.yml  install-manifest.yml
Custom App/ChatPDD/Database Architecture/: Climate related data scenario and policy resource inventory.md  Comprehensive Listing of Open Source Climate Environmental Libraries Databases Tools.md  comprehensive global climate data resources and tools overview.md  interactive webpage for open source climate and environmental resources report.url  open source climate environmental data tools and resources.md
Custom App/ChatPDD/app/: globals.css  landing-new.tsx  layout.tsx  page-old.tsx  page.tsx
Custom App/ChatPDD/components/: ab-test-analytics-dashboard.tsx  ai-status-indicator.tsx  analytics-card.tsx  app-header.tsx  bulk-photo-upload.tsx  carbon-credit-estimator.tsx  geospy-ai.tsx  (+27 more)
Custom App/JarvisGPT/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini
Custom App/JarvisGPT/.github/workflows/: ci-cd.yml
Custom App/JarvisGPT/Benchmark research/: mgx_app_research.md  mgx_research.md
Custom App/JarvisGPT/jarvisgpt/: __init__.py  __main__.py
Custom App/JarvisGPT/tests/: test_example.py
Custom App/TWIGA_v2/: .env.example  .env.production  .gitignore  .vercelignore  MIGRATION_REPORT.md  PRODUCTION.md  README.local.md  drizzle-dev.config.ts  drizzle.config.ts  package-lock.json  package.json  vercel.json  vite.config.ts
(+243 files in other folders)
