[tool.poetry]
name = "jarvisgpt"
version = "0.1.0"
description = "Local Self-Hosted MetaGPT + UI + Azure OpenAI System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "jarvisgpt"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
streamlit = "^1.28.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
chromadb = "^0.4.18"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
markdown = "^3.5.1"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=jarvisgpt --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["jarvisgpt"]
omit = ["**/__init__.py", "**/tests/**"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[metadata]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
